--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "mongoose": "^8.0.0",
     "mustache-express": "^1.3.2",
     "nedb": "^1.8.0",
     "passport": "^0.6.0",
